src/test/ui/inference/issue-71732.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-71732.rs:18:10
   |
LL |         .get(&"key".into())
   |          ^^^  ------------ this method call resolves to `T`
   |          |
   |          cannot infer type for type parameter `Q` declared on the associated function `get`
   |
   = note: cannot satisfy `String: Borrow<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
